RESOLVED FIXED79546
Fix uninitialized variables in HarfBuzzShaperBase
https://bugs.webkit.org/show_bug.cgi?id=79546
Summary Fix uninitialized variables in HarfBuzzShaperBase
Adrienne Walker
Reported 2012-02-24 16:43:31 PST
Fix uninitialized variables in HarfBuzzShaperBase
Attachments
Patch (1.47 KB, patch)
2012-02-24 16:45 PST, Adrienne Walker
no flags
Fix initialization order (1.47 KB, patch)
2012-02-24 16:46 PST, Adrienne Walker
dpranke: review+
Adrienne Walker
Comment 1 2012-02-24 16:45:34 PST
Adrienne Walker
Comment 2 2012-02-24 16:46:29 PST
Created attachment 128831 [details] Fix initialization order
Adrienne Walker
Comment 3 2012-02-24 16:54:23 PST
Note You need to log in before you can comment on or make changes to this bug.