Fix uninitialized variables in HarfBuzzShaperBase https://bugs.webkit.org/show_bug.cgi?id=79546

Reviewed by Dirk Pranke.

These were introduced in r108733.

* platform/graphics/harfbuzz/HarfBuzzShaperBase.cpp:
(WebCore::HarfBuzzShaperBase::HarfBuzzShaperBase):

Canonical link: https://commits.webkit.org/96644@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108871 268f45cc-cd09-0410-ab3c-d52691b4dbfc